# Robochef

./: .gitignore  Example.ipynb  README.md  actions.py  pddl2scene.py  playground.ipynb  playground.py  predicates.py  problem.py  readme.md  scene2pddl.py  scene_info.py  tasks.py
.ipynb_checkpoints/: Example-checkpoint.ipynb  Untitled-checkpoint.ipynb  playground-checkpoint.ipynb
durative/: problem_durative_1.pddl  robochef_durative.pddl
pddl/: plan_problems_1.SOL  problem_441221.pddl  robochef _durative.pddl  robochef.pddl  simple_breakfast.pddl
planners/marvin2/marvin2/: ADLAction.cpp  ADLAction.h  AbstractStuff.cpp  AbstractStuff.h  Action.cpp  Action.h  ActionApplicabilityTester.cpp  ActionApplicabilityTester.h  ActionInstance.cpp  ActionInstance.h  ActionInstanceWithSubactions.cpp  ActionInstanceWithSubactions.h  ActionSequenceValidator.cpp  ActionSequenceValidator.h  CMakeCache.txt  CMakeLists.txt  Entity.cpp  Entity.h  MacroAction.cpp  MacroAction.h  Makefile  Parameter.cpp  Parameter.h  Predicate.cpp  Predicate.h  PredicateInstance.cpp  PredicateInstance.h  PredicateInstanceAndState.cpp  PredicateInstanceAndState.h  PredicateInstanceTrie.cpp  PredicateInstanceTrie.h  RelativeStateRecord.cpp  RelativeStateRecord.h  Resource.cpp  Resource.h  ResourceInstance.cpp  ResourceInstance.h  State.cpp  State.h  SymmetryExtractor.cpp  (+22 more)
planners/marvin2/marvin2/parsing/: Makefile  cmake_install.cmake  lex.yy.cc  pddl+.cpp  ptree.h
planners/marvin2/marvin2/parsing/CVS/: Entries  Repository  Root
report/: Untitled Diagram.drawio  j.html  report
templates/: pfile.pddl
(+63 files in other folders)
